# DataScience

./: LICENSE  README.md  pyproject.toml
notebooks/: Sdds_Ex1.ipynb  test.ipynb
src/DataScienceModule/: DensityEstimator.py  Statistics.py
